--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  at_demo_data: ^0.0.3+1
+  atsign_authentication_helper: ^0.0.2
+  modal_progress_hud: any
+  at_server_status: ^0.1.0+1
+  at_chat_flutter: ^0.0.3
+
 
 dev_dependencies:
   flutter_test:
